-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
None
-
Affects Version/s: None
-
Component/s: hotspot
As currently implemented, a certain amount of work that is required to prepare a region that is to be promoted in place so that the region's remembered set can keep track of pointers from old to young is performed during the concurrent evacuation cycle.
In the case that an evacuation cycle is enabled only for the purpose of preparing these regions that are to be promoted in place, and there are not regions to be evacuated, there will be no forwarded objects during the evacuation cycle. This contradicts an existing assertion, which must be adjusted.
In the case that an evacuation cycle is enabled only for the purpose of preparing these regions that are to be promoted in place, and there are not regions to be evacuated, there will be no forwarded objects during the evacuation cycle. This contradicts an existing assertion, which must be adjusted.