8318019: GenShen: Fix assertion to allow empty evacuation cycles

Reviewed-by: wkemper